# mini-chats

./: .gitignore  LICENSE  README.md  Taskfile.yml
assets/: client.js  index.html
go-src/: Dockerfile  README.md  application.go  go.mod  main.go  routes.go  types.go
python/: README.md  pyproject.toml
python-src/: Dockerfile
python-src/src/: main.py
python-src/src/app/: settings.py
python-src/src/app/routes/: router.py
python-src/src/chat_dispatch/: dispatcher.py  schemas.py  singleton.py  task_runner.py  user_conn.py
rust-src/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-src/src/: application.rs  main.rs  messages.rs  settings.rs
